# IncognitoLLM

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
backend/: prompts.py
backend/components/: anonymize.py  llm.py  ocr_pdf.py  output.txt
backend/data/: loader.py  smtg.py  smtg2.py
backend/utils/: config.py  schema.py
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/pages/: __init__.py  dashboard.py  home.py  register.py
frontend/settings/: config.py
frontend/shapefiles/: PC_Boundary.dbf  PC_Boundary.sbx  PC_Boundary.shp.xml  PC_Boundary.shx
secura/: Dockerfile  app.py  requirements.txt
secura/backend/: Dockerfile  prompts.py
secura/backend/components/: llm.py  ocr_pdf.py  pdf_annot.py
secura/backend/data/: doc.py  indian_laws_and_acts.csv
secura/backend/presidiox/: README.md  common.py  flair_ner.py  models.py
secura/backend/utils/: config.py  schema.py
secura/pages/: __init__.py  dashboard.py  register.py
secura/settings/: config.py  helpers.py  utils.py
shapefiles/: PC_Boundary.sbn
